UtahLiveDataTest/src/objects/OpportunityQualification__c.object
<CustomObject>
    <description>[Business] This is for a Sub Recipient to Mark an Announcement so that after some days he or she can create an application for the same announcement. This is created because there might be lots of announcement but sub recipient might be interested with only few announcement so he/she can mark it as qualified and later convert into an application</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Sub_Recipient_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnoucementTitle__c</fullName>
        <formula>FundingOpportunity__r.AnnouncementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementId__c</fullName>
        <formula>FundingOpportunity__r.AnnouncementId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadlineDate__c</fullName>
        <formula>FundingOpportunity__r.ApplicationDeadlineWithDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Qualified Announcements</relationshipLabel>
        <relationshipName>Qualified_Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOAPublicationdate__c</fullName>
        <formula>TEXT(FundingOpportunity__r.FOAPublicationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOA Publication Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>Opportunity_Sub_Recipient_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HidePreApplicationBtn__c</fullName>
        <formula>OR(IF(IsPreApplicationRequired__c==false,true, IF(PreApplicationCreated__c,true,false)),
ApplicationCreated__c,
DATEVALUE(FundingOpportunity__r.PreApplicationDeadlineWithDateTime__c)&lt;Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePreApplicationBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPreApplicationRequired__c</fullName>
        <formula>FundingOpportunity__r.IsPreApplicationRequired__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsPreApplicationRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreapplicationSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Preapplication Submitted</description>
        <label>Is Preapplication Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityStatus__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Converted to Application</fullName>
                </value>
                <value>
                    <fullName>Submitted to Grantor</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreApplicationCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Application Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFAReleaseDate__c</fullName>
        <formula>TEXT(FundingOpportunity__r.RFAReleaseDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFA Release Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>FundingOpportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(FundingOpportunity__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Qualified Announcements</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FO-{0000}</displayFormat>
        <label>Qualified Announcement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualified Announcements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>SharetoExternalUsers__c</fullName>
        <label>Share to External Users</label>
    </sharingReasons>
</CustomObject>